<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_robot" Id="{947186bd-1148-4552-a060-a9b15f4804a6}">
    <Declaration><![CDATA[TYPE ST_robot :
STRUCT
	Xstatus: BOOL;
	rTemp: REAL;
	aDirection: ARRAY [1..4] OF BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>